--- a/desafio04/index.html
+++ b/desafio04/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="mediaquery.css">
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
@@ -16,14 +17,14 @@
 <body>
   <main>
     <article class="article-01">
-      <img src="images/icon-sedans.svg" alt="">
+      <img class="img01" src="images/icon-sedans.svg" alt="">
       <h1>Sedans</h1>
       <p>
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.
       </p>
 
-      <button>Learn More</button>
+      <button class="btn01">Learn More</button>
     </article>
 
     <article class="article-02">
@@ -33,17 +34,17 @@
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.
       </p>
-      <button>Learn More</button>
+      <button class="btn02">Learn More</button>
     </article>
 
-    <article class="article-03">
-      <img src="images/icon-luxury.svg" alt="">
+    <article  class="article-03">
+      <img class="img03" src="images/icon-luxury.svg" alt="">
       <h1>Luxury</h1>
       <p>
         Cruise in the best car brands without the bloated prices. Enjoy     the enhanced comfort of a luxury
         rental and arrive in style.
       </p>
-      <button>Learn More</button>
+      <button class="btn03">Learn More</button>
     </article>
   </main>
   
