--- a/desafio07/index.html
+++ b/desafio07/index.html
@@ -31,16 +31,18 @@
         <p>Monitors activity to identify project roadblocks</p>
         <img src="images/icon-supervisor.svg" alt="lupa">
     </article>
-    <article class="art-02">
-        <h2>Team Builder</h2>
-        <p>Scans our talent network to create the optimal team for your project</p>
-        <img src="images/icon-team-builder.svg" alt="">
-    </article>
-    <article class="art-03">
-        <h2>Karma</h2>
-        <p>Regularly evaluates our talent to ensure quality</p>
-        <img src="images/icon-karma.svg" alt="">
-    </article>
+    <div class="center">
+      <article class="art-02">
+          <h2>Team Builder</h2>
+          <p>Scans our talent network to create the optimal team for your project</p>
+          <img src="images/icon-team-builder.svg" alt="">
+      </article>
+      <article class="art-03">
+          <h2>Karma</h2>
+          <p>Regularly evaluates our talent to ensure quality</p>
+          <img src="images/icon-karma.svg" alt="">
+      </article>
+    </div>
     <article class="art-04">
         <h2>Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
