fazenedo mudancas no main

--- a/desafio06/index.html
+++ b/desafio06/index.html
@@ -22,10 +22,11 @@
     <h1>Huddle</h1>
   </header>
   <main>
-    <article class="art-top">
-      <img src="images/illustration-mockups.svg" alt="ilustração">
-    </article>
-    <div class="bottom-part">
+    <div class="img">
+      <article class="art-top">
+        <img src="images/illustration-mockups.svg" alt="ilustração">
+      </article>
+    </div>
       <article class="art-bottom">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
@@ -37,7 +38,6 @@
         <ion-icon class="logo" name="logo-twitter"></ion-icon>
         <ion-icon class="logo" name="logo-instagram"></ion-icon>
       </aside>
-    </div>
   </main>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
