--- a/desafio06/index.html
+++ b/desafio06/index.html
@@ -32,12 +32,15 @@
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
           Create connections with your users as you engage in genuine discussion. </p>
           <button>Register</button>
+
+          <div class="icons">
+            <ion-icon class="logo" name="logo-facebook"></ion-icon>
+            <ion-icon class="logo" name="logo-twitter"></ion-icon>
+            <ion-icon class="logo" name="logo-instagram"></ion-icon>
+          </div>
       </article>
-      <aside>
-        <ion-icon class="logo" name="logo-facebook"></ion-icon>
-        <ion-icon class="logo" name="logo-twitter"></ion-icon>
-        <ion-icon class="logo" name="logo-instagram"></ion-icon>
-      </aside>
+      
+      
   </main>
   
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
