add media query

--- a/desafio08/index.html
+++ b/desafio08/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
+  <link rel="stylesheet" href="mobile.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,21 +16,30 @@
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  <main>
+    <section class="background">
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    </section>
+    <section class="midle">
+      <img src="images/image-victor.jpg" alt="victor">
+      <h2>Victor Crest<span>26</span></h2> 
+      <p>London</p>
+      <hr>
+    </section>
+    <section class="final">
+      <div class="f-l-p">
+        <h2>80K</h2>
+        <p>Followers</p>
+      </div>
+      <div class="f-l-p">
+        <h2>803K</h2>
+        <p>Likes</p>
+      </div>
+      <div class="f-l-p">
+        <h2>1.4K</h2>
+        <p>Photos</p>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
