--- a/desafio09/index.html
+++ b/desafio09/index.html
@@ -24,17 +24,20 @@
       <p>
         Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
       </p>
-    </section>
-    <section class="final">
-      <div class="c-t-q">
-        <h2>10k+</h2> <p>companies</p>
-      </div>
-      <div class="c-t-q">
-        <h2>314</h2> <p>templates</p>
-      </div>
-      <div class="c-t-q">
-        <h2>12m+</h2> <p>queries</p>
-      </div>
+        <div class="c-t-q">
+          <div class="info-01">
+            <h2>10k+</h2>
+            <p>companies</p>
+          </div>
+          <div class="info-02">
+            <h2>314</h2>
+            <p>templates</p>
+          </div>
+          <div class="info-03">
+            <h2>12m+</h2>
+            <p>queries</p>
+          </div>
+        </div>
     </section>
   </main>
 </body>
