add media query

--- a/desafio09/index.html
+++ b/desafio09/index.html
@@ -15,7 +15,8 @@
 <body>
   <main>
     <section class="img-top">
-      <img src="images/image-header-mobile.jpg" alt="img-cabeçalho">
+      <img class="img-mobile" src="images/image-header-mobile.jpg" alt="img-cabeçalho">
+      <img class="img-desktop" src="images/image-header-desktop.jpg" alt="img desktop">
     </section>
     <section class="center">
       <h1>
