--- a/desafio11/index.html
+++ b/desafio11/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
+  <link rel="stylesheet" href="mobile.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,14 +16,20 @@
   </style>
 </head>
 <body>
+  <main>
+    <section>
+      <div class="qrcode">
+        <img src="images/image-qr-code.png" alt="">
+      </div>
+      <div class="informations"> 
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+    </section>
+  </main>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
+  
 </body>
 </html>
