--- a/desafio12/index.html
+++ b/desafio12/index.html
@@ -50,7 +50,7 @@
     <article class="art-03">
       <div class="profile">
         <img src="images/image-jeanette.jpg" alt="jeanette imagem">
-        <p><strong>Jeanette Harmon</strong>
+        <p><strong class="woman">Jeanette Harmon</strong>
           <br>
           Verified Graduate
         </p>
@@ -81,7 +81,7 @@
     <article class="art-05">
       <div class="profile">
         <img src="images/image-kira.jpg" alt="kira imagem">
-        <p><strong>Kira Whittle</strong>
+        <p><strong class="woman">Kira Whittle</strong>
           <br>
           Verified Graduate</p>
       </div>
