--- a/desafio12/index.html
+++ b/desafio12/index.html
@@ -8,6 +8,7 @@
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
   <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="mediaquery.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
