--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -15,53 +15,84 @@
   </style>
 </head>
 <body>
+  <header>
+    <img src="images/logo.svg" alt="logo-fylo">
+    <ul>
+      <li>features</li>
+      <li>Team</li>
+      <li>Sign In</li>
+    </ul>
+  </header>
+  <main>
+    <section>
+      <img src="images/illustration-1.svg" alt="primeira ilustracao">
+      <h1>
+        All your files in one secure location, accessible anywhere.
+      </h1>
+      <p>Fylo stores your most important files in one secure location. 
+        Access them wherever you need, share and collaborate with friends, 
+        family, and co-workers.
+      </p>
+      <input type="email" name="email" id="i-email" placeholder="Enter your email">
+      <button>Get Started</button>
+    </section>
+    <section>
+      <img src="images/illustration-2.svg" alt="segunda ilustracao">
+      <h2>Stay productive, wherever you are</h2>
+      <p>Never let location be an issue when accessing your files. Fylo has you 
+        covered for all of your file storage needs. <br>
+        Securely share files and folders with friends, family and colleagues for 
+        live collaboration. No email attachments required!
+      </p>
+      <a href="#">See how Fylo works <img src="images/icon-arrow.svg" alt="Flecha"></a>
+      <aside>
+        <img src="images/icon-quotes.svg" alt="aspas">
+        <p>Fylo has improved our team productivity by an order of magnitude. Since 
+          making the switch our team has become a well-oiled collaboration machine.</p>
+          <img src="images/avatar-testimonial.jpg" alt="kyle burton">
+          <h1> Kyle Burton</h1>
+          <p>Founder & CEO, Huddle</p>
+      </aside>
+    </section>
+    <section>
+      <h2>Get early access today</h2>
+      <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
+        If you have any questions, our support team would be happy to help you.</p>
+        <input type="email" name="email" id="i-email" placeholder="email@example.com">
+        <button>Get Started For Free</button>
+    </section>
+  </main>
 
-  Features
-  Team
-  Sign In
+  <footer>
+    <img src="images/logo.svg" alt="logo da empresa">
+    <img src="images/icon-phone.svg" alt="icon-phone">
+    <p> Phone: +1-543-123-4567</p>
+    <img src="images/icon-email.svg" alt="email-icon">
+    <p> example@fylo.com</p>
 
-  All your files in one secure location, accessible anywhere.
+    <ul>
+      <li> About Us</li>
+      <li> Jobs</li>
+      <li>Press</li>
+      <li> Blog</li>
+      <li>Contact Us</li>
+      <li>Terms</li>
+      <li> Privacy</li>
+    </ul>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+    <img src="images/" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
+  </footer>
 
-  Get Started
+ 
+ 
+  
+ 
 
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
+  
+  
+ 
 
   <footer>
     <p class="attribution">
