--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -13,15 +13,17 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
   <header>
     <img src="images/logo.svg" alt="logo-fylo">
-    <ul>
-      <li>features</li>
-      <li>Team</li>
-      <li>Sign In</li>
-    </ul>
+
+      <nav>
+        <a href="#">Features</a>
+        <a href="#">Team</a>
+        <a href="#">Sign In</a>
+      </nav>
   </header>
   <main>
     <section>
@@ -83,22 +85,6 @@
     <img src="images/" alt="">
     <img src="" alt="">
     <img src="" alt="">
-  </footer>
-
- 
- 
-  
- 
-
-  
-  
- 
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
   </footer>
 </body>
 </html>
