--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -26,8 +26,8 @@
       </nav>
   </header>
   <main>
-    <section>
-      <img src="images/illustration-1.svg" alt="primeira ilustracao">
+    <section class="first">
+      <img class="ilustration" src="images/illustration-1.svg" alt="primeira ilustracao">
       <h1>
         All your files in one secure location, accessible anywhere.
       </h1>
@@ -38,8 +38,8 @@
       <input type="email" name="email" id="i-email" placeholder="Enter your email">
       <button>Get Started</button>
     </section>
-    <section>
-      <img src="images/illustration-2.svg" alt="segunda ilustracao">
+    <section class="second">
+      <img class="ilustration" src="images/illustration-2.svg" alt="segunda ilustracao">
       <h2>Stay productive, wherever you are</h2>
       <p>Never let location be an issue when accessing your files. Fylo has you 
         covered for all of your file storage needs. <br>
@@ -56,7 +56,7 @@
           <p>Founder & CEO, Huddle</p>
       </aside>
     </section>
-    <section>
+    <section class="third">
       <h2>Get early access today</h2>
       <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
         If you have any questions, our support team would be happy to help you.</p>
