--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -43,6 +43,7 @@
       <h2>Stay productive, wherever you are</h2>
       <p>Never let location be an issue when accessing your files. Fylo has you 
         covered for all of your file storage needs. <br>
+        <br>
         Securely share files and folders with friends, family and colleagues for 
         live collaboration. No email attachments required!
       </p>
@@ -51,9 +52,13 @@
         <img src="images/icon-quotes.svg" alt="aspas">
         <p>Fylo has improved our team productivity by an order of magnitude. Since 
           making the switch our team has become a well-oiled collaboration machine.</p>
-          <img src="images/avatar-testimonial.jpg" alt="kyle burton">
-          <h1> Kyle Burton</h1>
-          <p>Founder & CEO, Huddle</p>
+          <div class="profile">
+            <img src="images/avatar-testimonial.jpg" alt="kyle burton">
+            <div>
+              <h1> Kyle Burton</h1>
+              <p>Founder & CEO, Huddle</p>
+            </div>
+          </div>
       </aside>
     </section>
     <section class="third">
