--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -72,10 +72,14 @@
 
   <footer>
     <img src="images/logo.svg" alt="logo da empresa">
-    <img src="images/icon-phone.svg" alt="icon-phone">
-    <p> Phone: +1-543-123-4567</p>
-    <img src="images/icon-email.svg" alt="email-icon">
-    <p> example@fylo.com</p>
+    <div class="info-tel">
+      <img src="images/icon-phone.svg" alt="icon-phone">
+      <p> Phone: +1-543-123-4567</p>
+    </div>
+    <div class="info-email">
+      <img src="images/icon-email.svg" alt="email-icon">
+      <p> example@fylo.com</p>
+    </div>
 
     <ul>
       <li> About Us</li>
