--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -71,12 +71,12 @@
   </main>
 
   <footer>
-    <img src="images/logo.svg" alt="logo da empresa">
-    <div class="info-tel">
+    <img class="logo" src="images/logo.svg" alt="logo da empresa">
+    <div class="info">
       <img src="images/icon-phone.svg" alt="icon-phone">
       <p> Phone: +1-543-123-4567</p>
     </div>
-    <div class="info-email">
+    <div class="info">
       <img src="images/icon-email.svg" alt="email-icon">
       <p> example@fylo.com</p>
     </div>
