--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -14,6 +14,8 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
   <link rel="stylesheet" href="mobile.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
   <header>
@@ -86,6 +88,8 @@
       <li> Jobs</li>
       <li>Press</li>
       <li> Blog</li>
+      <br>
+      <br>
       <li>Contact Us</li>
       <li>Terms</li>
       <li> Privacy</li>
