--- a/desafio14/index.html
+++ b/desafio14/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -7,81 +7,105 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Clipboard landing page</title>
+  <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="media-queries.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <header>
+    <img src="images/logo.svg" alt="logotipo-empresa">
+  </header>
+  <main>
+    <section class="first">
+      <article>
+        <h1>A history of everything you copy</h1>
+        <p>Clipboard allows you to track and organize everything you
+          copy. Instantly access your clipboard on all your devices.
+        </p>
+        <div class="buttons">
+          <button class="ios">Download for iOS</button>
+          <button class="mac">Download for Mac</button>
+        </div>
+      </article>
+    </section>
 
-  A history of everything you copy
+    <section class="second">
+      <article>
+        <h2>Keep track of your snippets</h2>
+        <p>Clipboard instantly stores any item you copy in the cloud,
+          meaning you can access your snippets immediately on all your
+          devices. Our Mac and iOS apps will help you organize everything.
+        </p>
+        <img class="logo" src="images/image-computer.png" alt="apple-computer">
+      </article>
+      <aside>
+        <h3>Quick Search</h3>
+        <p>Easily search your snippets by content, category, web address, application, and more.</p>
+        <h3>iCloud Sync</h3>
+        <p>Instantly saves and syncs snippets across all your devices.</p>
+        <h3>Complete History</h3>
+        <p>Retrieve any snippets from the first moment you started using the app.
+        </p>
+      </aside>
+    </section>
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
+    <section class="third">
+      <h2>Access Clipboard anywhere</h2>
+        <p>Whether you’re on the go, or at your computer, you can       access all your Clipboard
+        snippets in a few simple clicks.
+        </p>
+        <img  class="logo" src="images/image-devices.png" alt="">
+    </section>
 
-  Download for iOS
-  Download for Mac
+    <section class="fourth">
+      <h2>Supercharge your workflow</h2>
+      <p>We’ve got the tools to boost your productivity.</p>
+      <div class="tools">
+        <img src="images/icon-blacklist.svg" alt="blacklist-icon">
+        <h3>Create blacklists</h3>
+        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+      </div>
+      <div class="tools">
+        <img src="images/icon-text.svg" alt="">
+        <h3>Plain text snippets</h3>
+        <p>Remove unwanted formatting from copied text for a consistent look.</p>
+      </div>
+      <div class="tools">
+        <img src="images/icon-preview.svg" alt=" preview-icon">
+        <h3>Sneak preview</h3>
+        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      </div>
 
-  Keep track of your snippets
-
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
-
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-  
+      <aside>
+        <img src="images/logo-google.png" alt="">
+        <img src="images/logo-ibm.png" alt="">
+        <img src="images/logo-microsoft.png" alt="">
+        <img src="images/logo-hp.png" alt="">
+        <img src="images/logo-vector-graphics.png" alt="">
+      </aside>
+    </section>
+    <section class="fifth">
+      <h2>Clipboard for iOS and Mac OS</h2>
+      <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+        and you’re ready to start adding to your clipboard.</p>
+        <div class="buttons">
+          <button class="ios">Download for iOS</button>
+          <button class="mac">Download for Mac</button>
+        </div>
+    </section>
+  </main>
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <img src="images/logo.svg" alt="">
+    <a href="#">FAQs</a>
+    <a href="#">Contact Us</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Press Kit</a>
+    <a href="">Install Guide</a>
+    <div class="social-medias">
+      <img src="images/icon-facebook.svg" alt="">
+      <img src="images/icon-twitter.svg" alt="">
+      <img src="images/icon-instagram.svg" alt="">
+    </div>
   </footer>
 </body>
 </html>
