--- a/desafio14/index.html
+++ b/desafio14/index.html
@@ -36,7 +36,7 @@
           meaning you can access your snippets immediately on all your
           devices. Our Mac and iOS apps will help you organize everything.
         </p>
-        <img class="logo" src="images/image-computer.png" alt="apple-computer">
+        <img class="logo" id="logo" src="images/image-computer.png" alt="apple-computer">
       </article>
       <aside>
         <h3>Quick Search</h3>
@@ -60,20 +60,22 @@
     <section class="fourth">
       <h2>Supercharge your workflow</h2>
       <p>We’ve got the tools to boost your productivity.</p>
-      <div class="tools">
-        <img src="images/icon-blacklist.svg" alt="blacklist-icon">
-        <h3>Create blacklists</h3>
-        <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
-      </div>
-      <div class="tools">
-        <img src="images/icon-text.svg" alt="">
-        <h3>Plain text snippets</h3>
-        <p>Remove unwanted formatting from copied text for a consistent look.</p>
-      </div>
-      <div class="tools">
-        <img src="images/icon-preview.svg" alt=" preview-icon">
-        <h3>Sneak preview</h3>
-        <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+      <div class="tools-group">
+        <div class="tools">
+          <img src="images/icon-blacklist.svg" alt="blacklist-icon">
+          <h3>Create blacklists</h3>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <div class="tools">
+          <img src="images/icon-text.svg" alt="">
+          <h3>Plain text snippets</h3>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <div class="tools">
+          <img src="images/icon-preview.svg" alt=" preview-icon">
+          <h3>Sneak preview</h3>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
       </div>
 
       <aside>
@@ -96,11 +98,14 @@
   </main>
   <footer>
     <img src="images/logo.svg" alt="">
-    <a href="#">FAQs</a>
-    <a href="#">Contact Us</a>
-    <a href="#">Privacy Policy</a>
-    <a href="#">Press Kit</a>
-    <a href="">Install Guide</a>
+    
+      <div class="links">
+      <a href="#">FAQs</a>
+      <a href="#">Contact Us</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Press Kit</a>
+      <a href="">Install Guide</a>
+    </div>
     <div class="social-medias">
       <img src="images/icon-facebook.svg" alt="">
       <img src="images/icon-twitter.svg" alt="">
