--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -29,28 +29,32 @@
   <main>
     <section class="first">
       <img class="ilustration" src="images/illustration-1.svg" alt="primeirailustracao">
-      <h1>
-        All your files in one secure location, accessible anywhere.
-      </h1>
-      <p>Fylo stores your most important files in one secure location. 
-        Access them wherever you need, share and collaborate with friends, 
-        family, and co-workers.
-      </p>
-      <form action="#">
-        <input type="email" name="email" id="i-email" placeholder="Enter your email" required>
-        <button>Get Started</button>
-      </form>
+      <div class="paragraph-01">
+        <h1>
+          All your files in one secure location, accessible anywhere.
+        </h1>
+        <p>Fylo stores your most important files in one secure location.
+          Access them wherever you need, share and collaborate with friends,
+          family, and co-workers.
+        </p>
+        <form action="#">
+          <input type="email" name="email" id="i-email" placeholder="Enter your email" required>
+          <button class="start">Get Started</button>
+        </form>
+      </div>
     </section>
     <section class="second">
       <img class="ilustration" src="images/illustration-2.svg" alt="segunda ilustracao">
-      <h2>Stay productive, wherever you are</h2>
-      <p>Never let location be an issue when accessing your files. Fylo has you 
-        covered for all of your file storage needs. <br>
-        <br>
-        Securely share files and folders with friends, family and colleagues for 
-        live collaboration. No email attachments required!
-      </p>
-      <a href="#">See how Fylo works <img src="images/icon-arrow.svg" alt="Flecha"></a>
+      <div class="paragraph-01">
+        <h2>Stay productive, wherever you are</h2>
+        <p>Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs. <br>
+          <br>
+          Securely share files and folders with friends, family and colleagues for
+          live collaboration. No email attachments required!
+        </p>
+        <a href="#">See how Fylo works <img src="images/icon-arrow.svg" alt="Flecha"></a>
+      </div>
       <aside>
         <img src="images/icon-quotes.svg" alt="aspas">
         <p>Fylo has improved our team productivity by an order of magnitude. Since 
@@ -70,7 +74,7 @@
         If you have any questions, our support team would be happy to help you.</p>
         <form action="#">
           <input type="email" name="email" id="i-email" placeholder="email@example.com" required>
-          <button>Get Started For Free</button>
+          <button class="start">Get Started For Free</button>
         </form>
     </section>
   </main>
