--- a/desafio16/index.html
+++ b/desafio16/index.html
@@ -31,12 +31,14 @@
     <article class="art-01">
       <img class="img-cel" src="assets/images/image-web-3-mobile.jpg" alt="">
       <img class="img-desktop" src="assets/images/image-web-3-desktop.jpg" alt="">
-      <h2>
-        The Bright Future of Web 3.0?
-      </h2>
-      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
-        But is it really fulfilling its promise?
-      </p>
+      <div class="semclasse">
+        <h2>
+          The Bright Future of Web 3.0?
+        </h2>
+        <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
+          But is it really fulfilling its promise?
+        </p>
+      </div>
       <button><a href="#">Read more</a></button>
     </article>
     <article class="art-02">
