--- a/desafio16/index.html
+++ b/desafio16/index.html
@@ -14,8 +14,8 @@
 <header>
   <img src="assets/images/logo.svg" alt="logo">
   <nav>
-    <img class="menu" src="assets/images/icon-menu.svg" alt="menu">
-    <ul>
+    <img class="menu" id="menu" src="assets/images/icon-menu.svg" alt="menu" onclick="clickMenu()">
+    <ul id="nav">
       <li><a href="#">Home</a></li>
       <li><a href="#">New</a></li>
       <li><a href="#">Popular</a></li>
@@ -40,10 +40,12 @@
         <h3>Hydrogen VS Electric Cars</h3>
         <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
       </div>
+      <hr>
       <div class="info">
         <h3> The Downsides of AI Artistry</h3>
         <p>What are the possible adverse effects of on-demand AI image generation?</p>
       </div>
+      <hr>
       <div class="info">
         <h3> Is VC Funding Drying Up?</h3>
         <p> Private funding by VC firms is down 50% YOY. We take a look at what that means.
@@ -78,5 +80,15 @@
     </div>
   </div>
 </aside>
+
+<script>
+  function clickMenu() {
+    if (nav.style.display == 'block')  {
+      nav.style.display = 'none'
+    } else {
+        nav.style.display = 'block'
+    }
+  }
+</script>
 </body>
 </html>
