--- a/desafio16/index.html
+++ b/desafio16/index.html
@@ -8,6 +8,7 @@
   
   <title>Frontend Mentor | News homepage</title>
   <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="media-queries.css">
 
 </head>
 <body>
@@ -27,11 +28,17 @@
 <main>
   <section class="first">
       <img class="img-mobile" src="assets/images/image-web-3-mobile.jpg" alt="">
-    <h1>The Bright Future of Web 3.0?</h1>
-    <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-      But is it really fulfilling its promise?
-    </p>
-    <button> Read more</button>
+      <img class="img-desktop" src="assets/images/image-web-3-desktop.jpg" alt="foto desktop">
+    <div class="text-h1">
+      <h1>The Bright Future of Web 3.0?</h1>
+    
+      <div class="text-btn">
+        <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people.
+        But is it really fulfilling its promise?
+      </p>
+      <button> Read more</button>
+      </div>
+    </div>
   </section>
   <section class="second">
     <article>
@@ -80,15 +87,5 @@
     </div>
   </div>
 </aside>
-
-<script>
-  function clickMenu() {
-    if (nav.style.display == 'block')  {
-      nav.style.display = 'none'
-    } else {
-        nav.style.display = 'block'
-    }
-  }
-</script>
 </body>
 </html>
