--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -5,107 +5,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <link rel="stylesheet" href="mobile.css">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  <link rel="stylesheet" href="mobile.css">
-  <link rel="stylesheet" href="mediaquery.css">
 </head>
 <body>
-  <header>
-    <img src="images/logo.svg" alt="logo-fylo">
-
-      <nav>
-        <a href="#">Features</a>
-        <a href="#">Team</a>
-        <a href="#">Sign In</a>
-      </nav>
-  </header>
-  <main>
-    <section class="first">
-      <img class="ilustration" src="images/illustration-1.svg" alt="primeirailustracao">
-      <div class="paragraph-01">
-        <h1>
-          All your files in one secure location, accessible anywhere.
-        </h1>
-        <p>Fylo stores your most important files in one secure location.
-          Access them wherever you need, share and collaborate with friends,
-          family, and co-workers.
-        </p>
-        <form action="#">
-          <input type="email" name="email" id="i-email" placeholder="Enter your email" required>
-          <button class="start">Get Started</button>
-        </form>
+<header>
+  <img class="logo-header" src="images/logo.svg" alt="logo-fylo">
+  <ul>
+    <li>Features</li>
+    <li>Team</li>
+    <li>Sign In</li>
+  </ul>
+</header>
+<main>
+  <article class="fisrt-art"> 
+    <img class="ilustration" src="images/illustration-1.svg" alt="">
+    <h1>All your files in one secure location, accessible anywhere.</h1>
+    <p> Fylo stores your most important files in one secure location. 
+      Access them wherever you need, share and collaborate with friends, 
+      family, and co-workers.</p>
+      <div class="inputs">
+        <input type="email" name="email" id="email" required placeholder="Enter your e-mail">
+        <input type="submit" value="Get started">
       </div>
-    </section>
-    <section class="second">
-      <img class="ilustration" src="images/illustration-2.svg" alt="segunda ilustracao">
-      <div class="paragraph-01">
-        <h2>Stay productive, wherever you are</h2>
-        <p>Never let location be an issue when accessing your files. Fylo has you
-          covered for all of your file storage needs. <br>
-          <br>
-          Securely share files and folders with friends, family and colleagues for
-          live collaboration. No email attachments required!
-        </p>
-        <a href="#">See how Fylo works <img src="images/icon-arrow.svg" alt="Flecha"></a>
+  </article>
+  <article class="second-art">
+    <img class="ilustration" src="images/illustration-2.svg" alt="">
+    <h2>Stay productive, wherever you are</h2>
+    <p>Never let location be an issue when accessing your files. Fylo has you 
+      covered for all of your file storage needs</p>
+      <p> Securely share files and folders with friends, family and colleagues for 
+        live collaboration. No email attachments required!</p>
+        <span> See how Fylo works <img class="arrow" src="images/icon-arrow.svg" alt=""></span>
+        <hr>
+  </article>
+
+  <aside>
+    <img src="images/icon-quotes.svg" alt="">
+    <p> Fylo has improved our team productivity by an order of magnitude. Since 
+      making the switch our team has become a well-oiled collaboration machine.</p>
+      <div class="profile">
+        <img src="images/avatar-testimonial.jpg" alt="">
+        <div class="profile-name">
+          <h3>Kyle Burton</h3>
+          <span> Founder & CEO, Huddle</span>
+        </div>
       </div>
-      <aside>
-        <img src="images/icon-quotes.svg" alt="aspas">
-        <p>Fylo has improved our team productivity by an order of magnitude. Since 
-          making the switch our team has become a well-oiled collaboration machine.</p>
-          <div class="profile">
-            <img src="images/avatar-testimonial.jpg" alt="kyle burton">
-            <div>
-              <h1> Kyle Burton</h1>
-              <p>Founder & CEO, Huddle</p>
-            </div>
-          </div>
-      </aside>
-    </section>
-    <section class="third">
-      <h2>Get early access today</h2>
-      <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
-        If you have any questions, our support team would be happy to help you.</p>
-        <form action="#">
-          <input type="email" name="email" id="i-email" placeholder="email@example.com" required>
-          <button class="start">Get Started For Free</button>
-        </form>
-    </section>
-  </main>
+  </aside>
+</main>
+<section class="extra">
+  <h2>Get early access today</h2>
+  <p> It only takes a minute to sign up and our free starter tier is extremely generous. 
+    If you have any questions, our support team would be happy to help you.</p>
+    <div class="inputs-2">
+      <input type="email" placeholder="Email@example.com" required>
+      <input type="submit" value=" Get Started For Free">
+    </div>
+</section>
 
-  <footer>
-    <img class="logo" src="images/logo.svg" alt="logo da empresa">
-    <div class="info">
-      <img src="images/icon-phone.svg" alt="icon-phone">
-      <p> Phone: +1-543-123-4567</p>
-    </div>
-    <div class="info">
-      <img src="images/icon-email.svg" alt="email-icon">
-      <p> example@fylo.com</p>
-    </div>
+<footer>
+  <img src="images/logo.svg" alt="">
+  <img src="images/icon-phone.svg" alt="">
+  <p>Phone: +1-543-123-4567</p>
+  <img src="images/icon-email.svg" alt="">
+  <p>example@fylo.com</p>
 
-    <ul>
-      <li> About Us</li>
-      <li> Jobs</li>
-      <li>Press</li>
-      <li> Blog</li>
-      <br>
-      <br>
-      <li>Contact Us</li>
-      <li>Terms</li>
-      <li> Privacy</li>
-    </ul>
-    <div class="social-media">
-      <img src="images/icon-face.png" alt="">
-      <img src="images/icon-insta.png" alt="">
-      <img src="images/icon-twitter.png" alt="">
-    </div>
-  </footer>
+  <ul>
+    <li>About Us</li>
+    <li>Jobs</li>
+    <li>Press</li>
+    <li>Blog</li>
+    <li>Contact Us</li>
+    <li>Terms</li>
+    <li>Privacy</li>
+  </ul>
+</footer>
+
 </body>
 </html>
