--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -67,21 +67,28 @@
 </section>
 
 <footer>
-  <img src="images/logo.svg" alt="">
-  <img src="images/icon-phone.svg" alt="">
-  <p>Phone: +1-543-123-4567</p>
-  <img src="images/icon-email.svg" alt="">
-  <p>example@fylo.com</p>
+  <img class="footer-logo" src="images/logo.svg" alt="">
+  <div class="contact">
+    <img src="images/icon-phone.svg" alt="">
+    <p>Phone: +1-543-123-4567</p>
+  </div>
+  <div class="contact">
+    <img src="images/icon-email.svg" alt="">
+    <p>example@fylo.com</p>
+  </div>
 
-  <ul>
+  <ul class="ul-footer">
     <li>About Us</li>
     <li>Jobs</li>
     <li>Press</li>
     <li>Blog</li>
-    <li>Contact Us</li>
-    <li>Terms</li>
-    <li>Privacy</li>
-  </ul>
+   </ul>
+    <ul class="ul-footer">
+      <li>Contact Us</li>
+      <li>Terms</li>
+      <li>Privacy</li>
+    </ul>
+ 
 </footer>
 
 </body>
