--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -8,6 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="media-queries.css">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 </head>
@@ -23,14 +24,16 @@
 <main>
   <article class="fisrt-art"> 
     <img class="ilustration" src="images/illustration-1.svg" alt="">
-    <h1>All your files in one secure location, accessible anywhere.</h1>
-    <p> Fylo stores your most important files in one secure location. 
-      Access them wherever you need, share and collaborate with friends, 
-      family, and co-workers.</p>
-      <div class="inputs">
-        <input type="email" name="email" id="email" required placeholder="Enter your e-mail">
-        <input type="submit" value="Get started">
-      </div>
+    <div class="">
+      <h1>All your files in one secure location, accessible anywhere.</h1>
+      <p> Fylo stores your most important files in one secure location.
+        Access them wherever you need, share and collaborate with friends,
+        family, and co-workers.</p>
+        <div class="inputs">
+          <input type="email" name="email" id="email" required placeholder="Enter your e-mail">
+          <input type="submit" value="Get started">
+        </div>
+    </div>
   </article>
   <article class="second-art">
     <img class="ilustration" src="images/illustration-2.svg" alt="">
@@ -57,9 +60,11 @@
   </aside>
 </main>
 <section class="extra">
-  <h2>Get early access today</h2>
-  <p> It only takes a minute to sign up and our free starter tier is extremely generous. 
-    If you have any questions, our support team would be happy to help you.</p>
+  <div class="access">
+    <h2>Get early access today</h2>
+    <p> It only takes a minute to sign up and our free starter tier is extremely generous.
+      If you have any questions, our support team would be happy to help you.</p>
+  </div>
     <div class="inputs-2">
       <input type="email" placeholder="Email@example.com" required>
       <input type="submit" value=" Get Started For Free">
