--- a/desafio09/index.html
+++ b/desafio09/index.html
@@ -7,39 +7,27 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Stats preview card component</title>
-  <link rel="stylesheet" href="mobile.css">
-  <link rel="stylesheet" href="mediaquery.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-  <main>
-    <section class="img-top">
-      <img class="img-mobile" src="images/image-header-mobile.jpg" alt="img-cabeçalho">
-      <img class="img-desktop" src="images/image-header-desktop.jpg" alt="img desktop">
-    </section>
-    <section class="center">
-      <h1>
-        Get <span>insights</span> that help your business grow.
-      </h1>
-      <p>
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
-      </p>
-        <div class="c-t-q">
-          <div class="info-01">
-            <h2>10k+</h2>
-            <p>companies</p>
-          </div>
-          <div class="info-02">
-            <h2>314</h2>
-            <p>templates</p>
-          </div>
-          <div class="info-03">
-            <h2>12m+</h2>
-            <p>queries</p>
-          </div>
-        </div>
-    </section>
-  </main>
+
+  Get insights that help your business grow.
+
+  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+  experience, and overall efficiency.
+
+  10k+ companies
+  314 templates
+  12m+ queries
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
 </body>
 </html>
