--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -28,6 +28,7 @@
 </header>
   <main>
     <section class="first-s">
+      <img class="ilustration" src="images/illustration-1.svg" alt="ilustration" >
       <div class="text-field">
         <h1>All your files in one secure location, accessible anywhere.</h1>
         <p>Fylo stores your most important files in one secure location.
@@ -39,7 +40,7 @@
           <button>Get Started</button>
         </div>
       </div>
-      <img class="ilustration" src="images/illustration-1.svg" alt="ilustration" >
+      
     </section>
     <section class="second-s">
       <div class="text-field">
@@ -70,7 +71,7 @@
         If you have any questions, our support team would be happy to help you.
       </p>
       <div class="buttons">
-        <input type="email" required placeholder="enter your Email...">
+        <input type="email" required placeholder="email@example.com">
         <button>Get Started For Free</button>
       </div>
     </aside>
