--- a/desafio13/index.html
+++ b/desafio13/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <script src="https://kit.fontawesome.com/e842536017.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="mobile.css">
+  <link rel="stylesheet" href="mediaquery.css">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
